--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <img src="fig5.png" alt="画像5プレビュー" width="60" height="60"><br>画像5
         </button>
     </div>
-
+        <br>
+    <a href="guard.html">著作権ガードはこちら</a>
         <br>
         © 2025 股濡れ徒歩部
     </body>
